<package format="3">
  <name>twamp-protocol</name>
  <version>0.1.0</version>
  <description>Delay Measurement protocol</description>
  <maintainer email="javad@imperiumdrive.com">Javad Rahimi</maintainer>
  <license>Imperium Drive</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>imp_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>